2004-01-07  Rodney Dawes  <dobey@ximian.com>

	* gui/component/select-names/e-select-names.c:
	* gui/component/select-names/select-names.glade: Make the ESelectNames
	object be a HIG-compliant dialog, change "Folder" to be "Address Book",
	and fix a mnemonic conflict with "Category" and "Cancel"

	Fixes #51966

2004-01-07  Rodney Dawes  <dobey@ximian.com>

	* gui/component/addressbook-component.c: Move the smime_component_init
	call to the instance init callback, rather than the class init, and
	wrap it in #if HAVE_NSS, so the addressbook works without smime support

2004-01-07  JP Rosevear <jpr@ximian.com>

	* gui/component/Makefile.am: link in printer stuff

	Fixes #51172

2004-01-06  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook-migrate.c (check_for_conflict): remove
	spew.
	(migrate_contacts): same.
	(migrate_contact_folder): same.
	(migrate_local_folders): same, and plug a leak.

2004-01-06  Chris Toshok  <toshok@ximian.com>

	* gui/component/Makefile.am (libevolution_addressbook_la_SOURCES):
	add addressbook-migrate.[ch].

	* gui/component/addressbook-component.c
	(addressbook_component_init): remove the source creation from
	here, it's in the migration code now.
	(impl_upgradeFromVersion): new function, call the
	addressbook-migration stuff.
	(addressbook_component_class_init): fill in
	epv->upgradeFromVersion, and call smime_component_init.
	(addressbook_component_peek_base_directory): new function.
	(addressbook_component_peek_source_list): same.

	* gui/component/addressbook-component.h: add prototypes for
	_peek_base_directory and _peek_source_list.

	* gui/component/addressbook-migrate.[ch]: add migration code to
	convert stuff from 1.x over to 1.5/2.0.

2004-01-06  Rodney Dawes  <dobey@ximian.com>

	* gui/contact-editor/e-contact-editor-address.c: Apply
	patch from Roozbeh Pournader to update countries list

	Fixes #48151

2004-01-06  JP Rosevear <jpr@ximian.com>

	* gui/component/select-names/e-select-names-popup.c